--- a/coming-soon.html
+++ b/coming-soon.html
@@ -12,41 +12,41 @@
     <!-- Title -->
     <title>صفحه به زودی Treats</title>
     <!-- Favicon -->
-    <link rel="shortcut icon" href="../assets/images/logo/fav.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/images/logo/fav.png" type="image/x-icon">
 
     <!-- Google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&amp;family=Lora:wght@400;500;600;700&amp;display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../assets/css/vendors/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/vendors/bootstrap.min.css">
     <!-- Fontawesome Icon CSS -->
-    <link rel="stylesheet" href="../assets/fonts/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="./assets/fonts/fontawesome/css/all.min.css">
     <!-- Icomoon Icon CSS -->
-    <link rel="stylesheet" href="../assets/fonts/icomoon/style.css">
+    <link rel="stylesheet" href="./assets/fonts/icomoon/style.css">
     <!-- Magnific Popup CSS -->
-    <link rel="stylesheet" href="../assets/css/vendors/magnific-popup.min.css">
+    <link rel="stylesheet" href="./assets/css/vendors/magnific-popup.min.css">
     <!-- Nice Select CSS -->
-    <link rel="stylesheet" href="../assets/css/vendors/nice-select.css">
+    <link rel="stylesheet" href="./assets/css/vendors/nice-select.css">
     <!-- Swiper Slider -->
-    <link rel="stylesheet" href="../assets/css/vendors/swiper-bundle.min.css">
+    <link rel="stylesheet" href="./assets/css/vendors/swiper-bundle.min.css">
     <!-- AOS Animation CSS -->
-    <link rel="stylesheet" href="../assets/css/vendors/aos.min.css">
+    <link rel="stylesheet" href="./assets/css/vendors/aos.min.css">
     <!-- Animate CSS -->
-    <link rel="stylesheet" href="../assets/css/vendors/animate.min.css">
+    <link rel="stylesheet" href="./assets/css/vendors/animate.min.css">
     <!-- Main Style CSS -->
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <!-- Responsive CSS -->
-    <link rel="stylesheet" href="../assets/css/responsive.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
     <!-- RTL CSS -->
-    <link rel="stylesheet" href="../assets/css/rtl.css">
+    <link rel="stylesheet" href="./assets/css/rtl.css">
 </head>
 
 <body class="theme-color-1">
     <!-- Preloader start -->
     <div id="preLoader">
         <div class="loader">
-            <img src="../assets/images/loader-1.gif" alt="Preloader">
+            <img src="./assets/images/loader-1.gif" alt="Preloader">
         </div>
     </div>
     <!-- Preloader end -->
@@ -62,11 +62,11 @@
                                 <div class="content bg-light">
                                     <div class="logo">
                                         <a href="index.html" target="_self" title="تریتس">
-                                            <img class="lazyload" src="../assets/images/placeholder.png" data-src="../assets/images/logo/logo-2.png" alt="Logo">
+                                            <img class="lazyload" src="./assets/images/placeholder.png" data-src="./assets/images/logo/logo-2.png" alt="Logo">
                                         </a>
                                     </div>
                                     <div class="svg-image mx-auto">
-                                        <img class="lazyload" src="../assets/images/placeholder.png" data-src="../assets/images/coming-soon.png" alt="Image">
+                                        <img class="lazyload" src="./assets/images/placeholder.png" data-src="./assets/images/coming-soon.png" alt="Image">
                                     </div>
                                 </div>
                             </div>
@@ -119,27 +119,27 @@
     <!-- Coming-soon-area end -->
 
     <!-- Jquery JS -->
-    <script src="../assets/js/vendors/jquery.min.js"></script>
+    <script src="./assets/js/vendors/jquery.min.js"></script>
     <!-- Bootstrap JS -->
-    <script src="../assets/js/vendors/bootstrap.min.js"></script>
+    <script src="./assets/js/vendors/bootstrap.min.js"></script>
     <!-- Counter JS -->
-    <script src="../assets/js/vendors/jquery.counterup.min.js"></script>
+    <script src="./assets/js/vendors/jquery.counterup.min.js"></script>
     <!-- Magnific Popup JS -->
-    <script src="../assets/js/vendors/jquery.magnific-popup.min.js"></script>
+    <script src="./assets/js/vendors/jquery.magnific-popup.min.js"></script>
     <!-- Nice Select JS -->
-    <script src="../assets/js/vendors/jquery.nice-select.min.js"></script>
+    <script src="./assets/js/vendors/jquery.nice-select.min.js"></script>
     <!-- Swiper Slider JS -->
-    <script src="../assets/js/vendors/swiper-bundle.min.js"></script>
+    <script src="./assets/js/vendors/swiper-bundle.min.js"></script>
     <!-- Lazysizes -->
-    <script src="../assets/js/vendors/lazysizes.min.js"></script>
+    <script src="./assets/js/vendors/lazysizes.min.js"></script>
     <!-- Mouse Hover JS -->
-    <script src="../assets/js/vendors/mouse-hover-move.js"></script>
+    <script src="./assets/js/vendors/mouse-hover-move.js"></script>
     <!-- Twinmax JS -->
-    <script src="../assets/js/vendors/tweenMax.min.js"></script>
+    <script src="./assets/js/vendors/tweenMax.min.js"></script>
     <!-- AOS JS -->
-    <script src="../assets/js/vendors/aos.min.js"></script>
+    <script src="./assets/js/vendors/aos.min.js"></script>
     <!-- Main script JS -->
-    <script src="../assets/js/rtl-script.js"></script>
+    <script src="./assets/js/rtl-script.js"></script>
 </body>
 
 
