--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zxx" dir="rtl">
-  <!-- Mirrored from themeforest.kreativdev.com/treats/demo/rtl/cart.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 05 Oct 2023 08:05:34 GMT -->
+  <!-- Mirrored from themeforest.kreativdev.com/treats/demo/rtl/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 05 Oct 2023 08:05:35 GMT -->
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,8 +8,7 @@
     <meta name="author" content="KreativDev" />
 
     <!-- Title -->
-    <title>صفحه سبد خرید Treats</title>
-
+    <title>صفحه مخاطب Treats</title>
     <!-- Favicon -->
     <link
       rel="shortcut icon"
@@ -60,6 +59,7 @@
     </div>
     <!-- Preloader end -->
 
+    <!-- Header-area start -->
     <header class="header-area header-1" data-aos="fade-down">
       <!-- Start mobile menu -->
       <div class="mobile-menu">
@@ -333,13 +333,11 @@
       <div class="overlay 65"></div>
       <div class="container">
         <div class="content text-center">
-          <h2 class="color-white">سبد خرید</h2>
+          <h2 class="color-white">مخاطب</h2>
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="index.html">خانه</a></li>
-              <li class="breadcrumb-item active" aria-current="page">
-                سبد خرید
-              </li>
+              <li class="breadcrumb-item active" aria-current="page">مخاطب</li>
             </ol>
           </nav>
         </div>
@@ -347,240 +345,155 @@
     </div>
     <!-- Breadcrumb end -->
 
-    <!-- Shopping-area Start -->
-    <div class="shopping-area cart ptb-100">
+    <!-- Contact-area start -->
+    <div class="contact-area pt-100 pb-60">
       <div class="container">
-        <div class="row justify-content-center gx-xl-5">
-          <div class="col-lg-9">
-            <form>
-              <div class="item-list border radius-md table-responsive">
-                <table class="shopping-table">
-                  <thead>
-                    <tr class="table-heading">
-                      <th scope="col" colspan="2" class="first">
-                        تولید - محصول
-                      </th>
-                      <th scope="col">تعداد</th>
-                      <th scope="col">موجودی</th>
-                      <th scope="col">جمع</th>
-                      <th scope="col" class="last">برداشتن</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr class="item">
-                      <td class="product-img">
-                        <div class="image">
-                          <a
-                            href="shop-details.html"
-                            class="lazy-container radius-md ratio ratio-1-1"
-                          >
-                            <img
-                              class="lazyload"
-                              src="./assets/images/placeholder.png"
-                              data-src="./assets/images/shop-1.jpg"
-                              alt="Product"
-                            />
-                          </a>
-                        </div>
-                      </td>
-                      <td class="product-desc">
-                        <h6>
-                          <a
-                            class="product-title mb-10"
-                            href="shop-details.html"
-                            >مرغ ماسالا</a
-                          >
-                        </h6>
-                        <div class="ratings">
-                          <div class="rate">
-                            <div class="rating-icon"></div>
-                          </div>
-                          <span class="ratings-total">(4.5)</span>
-                        </div>
-                      </td>
-                      <td class="qty">
-                        <div class="quantity-input">
-                          <div class="qty-btn quantity-down">
-                            <i class="fal fa-minus"></i>
-                          </div>
-                          <input
-                            type="text"
-                            value="1"
-                            name="quantity"
-                            spellcheck="false"
-                            data-ms-editor="true"
-                          />
-                          <div class="qty-btn quantity-up">
-                            <i class="fal fa-plus"></i>
-                          </div>
-                        </div>
-                      </td>
-                      <td class="product-availability">
-                        <span class="badge bg-success">در انبار</span>
-                      </td>
-                      <td>
-                        <h6 class="mb-0">10.000</h6>
-                      </td>
-                      <td class="text-end">
-                        <a
-                          href="cart.html"
-                          class="btn btn-remove rounded-pill mx-auto"
-                        >
-                          <i class="fal fa-trash-alt"></i>
-                        </a>
-                      </td>
-                    </tr>
-                    <tr class="item">
-                      <td class="product-img">
-                        <div class="image">
-                          <a
-                            href="shop-details.html"
-                            class="lazy-container radius-md ratio ratio-1-1"
-                          >
-                            <img
-                              class="lazyload"
-                              src="./assets/images/placeholder.png"
-                              data-src="./assets/images/shop-2.jpg"
-                              alt="Product"
-                            />
-                          </a>
-                        </div>
-                      </td>
-                      <td class="product-desc">
-                        <h6>
-                          <a
-                            class="product-title mb-10"
-                            href="shop-details.html"
-                            >مرغ کبابی</a
-                          >
-                        </h6>
-                        <div class="ratings">
-                          <div class="rate">
-                            <div class="rating-icon"></div>
-                          </div>
-                          <span class="ratings-total">(4.7)</span>
-                        </div>
-                      </td>
-                      <td class="qty">
-                        <div class="quantity-input">
-                          <div class="qty-btn quantity-down">
-                            <i class="fal fa-minus"></i>
-                          </div>
-                          <input
-                            type="text"
-                            value="1"
-                            name="quantity"
-                            spellcheck="false"
-                            data-ms-editor="true"
-                          />
-                          <div class="qty-btn quantity-up">
-                            <i class="fal fa-plus"></i>
-                          </div>
-                        </div>
-                      </td>
-                      <td class="product-availability">
-                        <span class="badge bg-success">در انبار</span>
-                      </td>
-                      <td>
-                        <h6 class="mb-0">20.000</h6>
-                      </td>
-                      <td class="text-end">
-                        <a
-                          href="cart.html"
-                          class="btn btn-remove rounded-pill mx-auto"
-                        >
-                          <i class="fal fa-trash-alt"></i>
-                        </a>
-                      </td>
-                    </tr>
-                    <tr class="item">
-                      <td class="product-img">
-                        <div class="image">
-                          <a
-                            href="shop-details.html"
-                            class="lazy-container radius-md ratio ratio-1-1"
-                          >
-                            <img
-                              class="lazyload"
-                              src="./assets/images/placeholder.png"
-                              data-src="./assets/images/shop-3.jpg"
-                              alt="Product"
-                            />
-                          </a>
-                        </div>
-                      </td>
-                      <td class="product-desc">
-                        <h6>
-                          <a
-                            class="product-title mb-10"
-                            href="shop-details.html"
-                            >پاستا مرغ</a
-                          >
-                        </h6>
-                        <div class="ratings">
-                          <div class="rate">
-                            <div class="rating-icon"></div>
-                          </div>
-                          <span class="ratings-total">(4.8)</span>
-                        </div>
-                      </td>
-                      <td class="qty">
-                        <div class="quantity-input">
-                          <div class="qty-btn quantity-down">
-                            <i class="fal fa-minus"></i>
-                          </div>
-                          <input
-                            type="text"
-                            value="1"
-                            name="quantity"
-                            spellcheck="false"
-                            data-ms-editor="true"
-                          />
-                          <div class="qty-btn quantity-up">
-                            <i class="fal fa-plus"></i>
-                          </div>
-                        </div>
-                      </td>
-                      <td class="product-availability">
-                        <span class="badge bg-warning">در انبار</span>
-                      </td>
-                      <td>
-                        <h6 class="mb-0">30.000</h6>
-                      </td>
-                      <td class="text-end">
-                        <a
-                          href="cart.html"
-                          class="btn btn-remove rounded-pill mx-auto"
-                        >
-                          <i class="fal fa-trash-alt"></i>
-                        </a>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
+        <div class="row justify-content-center">
+          <div class="col-lg-4 col-md-6">
+            <div class="card border radius-md mb-30" data-aos="fade-up">
+              <div class="icon radius-sm bg-primary-light">
+                <i class="fal fa-phone-plus"></i>
               </div>
-              <div class="btn-groups mt-30">
-                <a
-                  href="checkout.html"
-                  class="btn btn-md btn-primary"
-                  title="پرداخت"
-                  target="_self"
-                  >پرداخت</a
-                >
-                <a
-                  href="cart.html"
-                  class="btn btn-md btn-primary"
-                  title="به روز رسانی سبد خرید"
-                  target="_self"
-                  >به روز رسانی سبد خرید</a
-                >
+              <div class="card-text">
+                <p><a href="tel:+990123456789">+990 123 456 789</a></p>
+                <p><a href="tel:+990456123789">+990 456 123 789</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="card border radius-md mb-30" data-aos="fade-up">
+              <div class="icon radius-sm bg-primary-light">
+                <i class="fal fa-envelope"></i>
+              </div>
+              <div class="card-text">
+                <p><a href="mailTo:live@example.com">live@example.com</a></p>
+                <p><a href="mailTo:info@example.com">info@example.com</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="card border radius-md mb-30" data-aos="fade-up">
+              <div class="icon radius-sm bg-primary-light">
+                <i class="fal fa-map-marker-alt"></i>
+              </div>
+              <div class="card-text">
+                <p>
+                  آدرس: لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت
+                  چاپ و با استفاده از طراحان گرافیک است.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Spacer -->
+        <div class="pb-70"></div>
+        <div class="row gx-xl-5">
+          <div class="section-title title-center mb-50">
+            <h2 class="title mb-0" data-aos="fade-up">در تماس باشید</h2>
+          </div>
+          <div class="col-lg-6 mb-40" data-aos="fade-up">
+            <form id="contactForm">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="form-group mb-20">
+                    <input
+                      type="text"
+                      name="name"
+                      class="form-control"
+                      id="name"
+                      required
+                      placeholder="اسم شما*"
+                    />
+                  </div>
+                </div>
+
+                <div class="col-md-6">
+                  <div class="form-group mb-20">
+                    <input
+                      type="email"
+                      name="email"
+                      class="form-control"
+                      id="email"
+                      required
+                      placeholder="فامیلی شما*"
+                    />
+                  </div>
+                </div>
+
+                <div class="col-12">
+                  <div class="form-group mb-20">
+                    <input
+                      type="text"
+                      name="subject"
+                      class="form-control"
+                      id="subject"
+                      required
+                      placeholder="موضوع تو"
+                    />
+                  </div>
+                </div>
+
+                <div class="col-12">
+                  <div class="form-group mb-20">
+                    <textarea
+                      name="message"
+                      id="message"
+                      class="form-control"
+                      cols="30"
+                      rows="8"
+                      placeholder="پیغام تو..."
+                    ></textarea>
+                  </div>
+                </div>
+
+                <div class="col-lg-12">
+                  <div class="custom-checkbox mb-20">
+                    <input
+                      class="input-checkbox"
+                      type="checkbox"
+                      name="checkbox"
+                      id="checkbox1"
+                      value=""
+                    />
+                    <label class="form-check-label" for="checkbox1"
+                      ><span>
+                        من با تریتس موافقم
+                        <a href="terms-conditions.html">شرایط و ضوابط</a>
+                        <span class="color-red">*</span>
+                      </span></label
+                    >
+                  </div>
+                </div>
+
+                <div class="col-md-12">
+                  <button
+                    class="btn btn-lg btn-primary rounded-pill"
+                    type="button"
+                    aria-label="Send Message"
+                  >
+                  پیام فرستادن
+                  </button>
+                </div>
               </div>
             </form>
+          </div>
+          <div class="col-lg-6 mb-40" data-aos="fade-up">
+            <div class="map h-100 overflow-hidden radius-md">
+              <iframe
+                class="lazyload h-100"
+                id="map"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193595.15830869428!2d-74.119763973046!3d40.69766374874431!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sbd!4v1659780709118!5m2!1sen!2sbd"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <!-- Shopping-area End -->
+    <!-- Contact-area end -->
 
     <!-- Gallery-area start -->
     <div class="gallery-area" data-aos="fade-up">
@@ -992,5 +905,5 @@
     <script src="./assets/js/rtl-script.js"></script>
   </body>
 
-  <!-- Mirrored from themeforest.kreativdev.com/treats/demo/rtl/cart.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 05 Oct 2023 08:05:34 GMT -->
+  <!-- Mirrored from themeforest.kreativdev.com/treats/demo/rtl/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 05 Oct 2023 08:05:35 GMT -->
 </html>
