--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Title -->
     <title>فروشگاه پهناور</title>
     <!-- Favicon -->
-    <link rel="shortcut icon" href="./assets/images/logo/fav.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/images/icon.png" type="image/x-icon">
 
     <!-- Google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
@@ -198,9 +198,6 @@
                                     <i class="fal fa-shopping-bag"></i>
                                     <span class="badge rounded-pill bg-primary">3</span>
                                 </a>
-                            </div>
-                            <div class="item">
-                                <a href="reservation.html" class="btn btn-md btn-primary radius-sm" title="یک میز رزرو کنید" target="_self">رزرو</a>
                             </div>
                         </div>
                     </nav>
