--- a/signup.html
+++ b/signup.html
@@ -12,7 +12,7 @@
     <!-- Favicon -->
     <link
       rel="shortcut icon"
-      href="../assets/images/logo/fav.png"
+      href="./assets/images/logo/fav.png"
       type="image/x-icon"
     />
 
@@ -24,37 +24,37 @@
       rel="stylesheet"
     />
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../assets/css/vendors/bootstrap.min.css" />
+    <link rel="stylesheet" href="./assets/css/vendors/bootstrap.min.css" />
     <!-- Fontawesome Icon CSS -->
-    <link rel="stylesheet" href="../assets/fonts/fontawesome/css/all.min.css" />
+    <link rel="stylesheet" href="./assets/fonts/fontawesome/css/all.min.css" />
     <!-- Icomoon Icon CSS -->
-    <link rel="stylesheet" href="../assets/fonts/icomoon/style.css" />
+    <link rel="stylesheet" href="./assets/fonts/icomoon/style.css" />
     <!-- Magnific Popup CSS -->
     <link
       rel="stylesheet"
-      href="../assets/css/vendors/magnific-popup.min.css"
+      href="./assets/css/vendors/magnific-popup.min.css"
     />
     <!-- Nice Select CSS -->
-    <link rel="stylesheet" href="../assets/css/vendors/nice-select.css" />
+    <link rel="stylesheet" href="./assets/css/vendors/nice-select.css" />
     <!-- Swiper Slider -->
-    <link rel="stylesheet" href="../assets/css/vendors/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="./assets/css/vendors/swiper-bundle.min.css" />
     <!-- AOS Animation CSS -->
-    <link rel="stylesheet" href="../assets/css/vendors/aos.min.css" />
+    <link rel="stylesheet" href="./assets/css/vendors/aos.min.css" />
     <!-- Animate CSS -->
-    <link rel="stylesheet" href="../assets/css/vendors/animate.min.css" />
+    <link rel="stylesheet" href="./assets/css/vendors/animate.min.css" />
     <!-- Main Style CSS -->
-    <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <!-- Responsive CSS -->
-    <link rel="stylesheet" href="../assets/css/responsive.css" />
+    <link rel="stylesheet" href="./assets/css/responsive.css" />
     <!-- RTL CSS -->
-    <link rel="stylesheet" href="../assets/css/rtl.css" />
+    <link rel="stylesheet" href="./assets/css/rtl.css" />
   </head>
 
   <body class="theme-color-1">
     <!-- Preloader start -->
     <div id="preLoader">
       <div class="loader">
-        <img src="../assets/images/loader-1.gif" alt="Preloader" />
+        <img src="./assets/images/loader-1.gif" alt="Preloader" />
       </div>
     </div>
     <!-- Preloader end -->
@@ -74,7 +74,7 @@
           <!-- Mobile Logo -->
           <div class="logo">
             <a href="index.html" target="_self" title="Treats">
-              <img src="../assets/images/logo/logo-1.png" alt="Brand logo" />
+              <img src="./assets/images/logo/logo-1.png" alt="Brand logo" />
             </a>
           </div>
           <!-- Menu toggle button -->
@@ -144,7 +144,7 @@
                 target="_self"
                 title="تریتس"
               >
-                <img src="../assets/images/logo/logo-1.png" alt="Brand Logo" />
+                <img src="./assets/images/logo/logo-1.png" alt="Brand Logo" />
               </a>
               <!-- Navigation items -->
               <div class="collapse navbar-collapse">
@@ -328,7 +328,7 @@
     <!-- Breadcrumb start -->
     <div
       class="breadcrumb-area bg-img bg-cover"
-      data-bg-image="../assets/images/breadcrumb-bg.jpg"
+      data-bg-image="./assets/images/breadcrumb-bg.jpg"
     >
       <div class="overlay 65"></div>
       <div class="container">
@@ -488,16 +488,16 @@
                 <div class="lazy-container ratio ratio-2-3">
                   <img
                     class="lazyload"
-                    src="../assets/images/placeholder.png"
-                    data-src="../assets/images/gallery-1.png"
+                    src="./assets/images/placeholder.png"
+                    data-src="./assets/images/gallery-1.png"
                     alt="Image"
                   />
                 </div>
                 <div class="icon rounded-pill">
                   <img
                     class="lazyload blur-up"
-                    src="../assets/images/placeholder.png"
-                    data-src="../assets/images/instagram.png"
+                    src="./assets/images/placeholder.png"
+                    data-src="./assets/images/instagram.png"
                     alt="Image"
                   />
                 </div>
@@ -513,16 +513,16 @@
                 <div class="lazy-container ratio ratio-2-3">
                   <img
                     class="lazyload"
-                    src="../assets/images/placeholder.png"
-                    data-src="../assets/images/gallery-2.png"
+                    src="./assets/images/placeholder.png"
+                    data-src="./assets/images/gallery-2.png"
                     alt="Image"
                   />
                 </div>
                 <div class="icon rounded-pill">
                   <img
                     class="lazyload blur-up"
-                    src="../assets/images/placeholder.png"
-                    data-src="../assets/images/instagram.png"
+                    src="./assets/images/placeholder.png"
+                    data-src="./assets/images/instagram.png"
                     alt="Image"
                   />
                 </div>
@@ -538,16 +538,16 @@
                 <div class="lazy-container ratio ratio-2-3">
                   <img
                     class="lazyload"
-                    src="../assets/images/placeholder.png"
-                    data-src="../assets/images/gallery-3.png"
+                    src="./assets/images/placeholder.png"
+                    data-src="./assets/images/gallery-3.png"
                     alt="Image"
                   />
                 </div>
                 <div class="icon rounded-pill">
                   <img
                     class="lazyload blur-up"
-                    src="../assets/images/placeholder.png"
-                    data-src="../assets/images/instagram.png"
+                    src="./assets/images/placeholder.png"
+                    data-src="./assets/images/instagram.png"
                     alt="Image"
                   />
                 </div>
@@ -563,16 +563,16 @@
                 <div class="lazy-container ratio ratio-2-3">
                   <img
                     class="lazyload"
-                    src="../assets/images/placeholder.png"
-                    data-src="../assets/images/gallery-4.png"
+                    src="./assets/images/placeholder.png"
+                    data-src="./assets/images/gallery-4.png"
                     alt="Image"
                   />
                 </div>
                 <div class="icon rounded-pill">
                   <img
                     class="lazyload blur-up"
-                    src="../assets/images/placeholder.png"
-                    data-src="../assets/images/instagram.png"
+                    src="./assets/images/placeholder.png"
+                    data-src="./assets/images/instagram.png"
                     alt="Image"
                   />
                 </div>
@@ -588,16 +588,16 @@
                 <div class="lazy-container ratio ratio-2-3">
                   <img
                     class="lazyload"
-                    src="../assets/images/placeholder.png"
-                    data-src="../assets/images/gallery-5.png"
+                    src="./assets/images/placeholder.png"
+                    data-src="./assets/images/gallery-5.png"
                     alt="Image"
                   />
                 </div>
                 <div class="icon rounded-pill">
                   <img
                     class="lazyload blur-up"
-                    src="../assets/images/placeholder.png"
-                    data-src="../assets/images/instagram.png"
+                    src="./assets/images/placeholder.png"
+                    data-src="./assets/images/instagram.png"
                     alt="Image"
                   />
                 </div>
@@ -612,7 +612,7 @@
     <!-- Footer-area start -->
     <footer
       class="footer-area bg-img bg-cover"
-      data-bg-image="../assets/images/footer-bg-1.jpg"
+      data-bg-image="./assets/images/footer-bg-1.jpg"
     >
       <div class="overlay opacity-95"></div>
       <div class="container">
@@ -623,7 +623,7 @@
                 <div class="navbar-brand">
                   <a href="index.html" target="_self" title="لینک">
                     <img
-                      src="../assets/images/logo/logo-1.png"
+                      src="./assets/images/logo/logo-1.png"
                       alt="Brand Logo"
                     />
                   </a>
@@ -705,8 +705,8 @@
                     >
                       <img
                         class="lazyload"
-                        src="../assets/images/placeholder.png"
-                        data-src="../assets/images/footer-blog-1.jpg"
+                        src="./assets/images/placeholder.png"
+                        data-src="./assets/images/footer-blog-1.jpg"
                         alt="Blog Image"
                       />
                     </a>
@@ -738,8 +738,8 @@
                     >
                       <img
                         class="lazyload"
-                        src="../assets/images/placeholder.png"
-                        data-src="../assets/images/footer-blog-2.jpg"
+                        src="./assets/images/placeholder.png"
+                        data-src="./assets/images/footer-blog-2.jpg"
                         alt="Blog Image"
                       />
                     </a>
@@ -860,27 +860,27 @@
     <!-- Go to Top -->
 
     <!-- Jquery JS -->
-    <script src="../assets/js/vendors/jquery.min.js"></script>
+    <script src="./assets/js/vendors/jquery.min.js"></script>
     <!-- Bootstrap JS -->
-    <script src="../assets/js/vendors/bootstrap.min.js"></script>
+    <script src="./assets/js/vendors/bootstrap.min.js"></script>
     <!-- Counter JS -->
-    <script src="../assets/js/vendors/jquery.counterup.min.js"></script>
+    <script src="./assets/js/vendors/jquery.counterup.min.js"></script>
     <!-- Magnific Popup JS -->
-    <script src="../assets/js/vendors/jquery.magnific-popup.min.js"></script>
+    <script src="./assets/js/vendors/jquery.magnific-popup.min.js"></script>
     <!-- Nice Select JS -->
-    <script src="../assets/js/vendors/jquery.nice-select.min.js"></script>
+    <script src="./assets/js/vendors/jquery.nice-select.min.js"></script>
     <!-- Swiper Slider JS -->
-    <script src="../assets/js/vendors/swiper-bundle.min.js"></script>
+    <script src="./assets/js/vendors/swiper-bundle.min.js"></script>
     <!-- Lazysizes -->
-    <script src="../assets/js/vendors/lazysizes.min.js"></script>
+    <script src="./assets/js/vendors/lazysizes.min.js"></script>
     <!-- Mouse Hover JS -->
-    <script src="../assets/js/vendors/mouse-hover-move.js"></script>
+    <script src="./assets/js/vendors/mouse-hover-move.js"></script>
     <!-- Twinmax JS -->
-    <script src="../assets/js/vendors/tweenMax.min.js"></script>
+    <script src="./assets/js/vendors/tweenMax.min.js"></script>
     <!-- AOS JS -->
-    <script src="../assets/js/vendors/aos.min.js"></script>
+    <script src="./assets/js/vendors/aos.min.js"></script>
     <!-- Main script JS -->
-    <script src="../assets/js/rtl-script.js"></script>
+    <script src="./assets/js/rtl-script.js"></script>
   </body>
 
   <!-- Mirrored from themeforest.kreativdev.com/treats/demo/rtl/signup.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 05 Oct 2023 08:05:35 GMT -->
