--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
     <!-- Favicon -->
     <link
       rel="shortcut icon"
-      href="../assets/images/logo/fav.png"
+      href="./assets/images/logo/fav.png"
       type="image/x-icon"
     />
 
@@ -24,37 +24,37 @@
       rel="stylesheet"
     />
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../assets/css/vendors/bootstrap.min.css" />
+    <link rel="stylesheet" href="./assets/css/vendors/bootstrap.min.css" />
     <!-- Fontawesome Icon CSS -->
-    <link rel="stylesheet" href="../assets/fonts/fontawesome/css/all.min.css" />
+    <link rel="stylesheet" href="./assets/fonts/fontawesome/css/all.min.css" />
     <!-- Icomoon Icon CSS -->
-    <link rel="stylesheet" href="../assets/fonts/icomoon/style.css" />
+    <link rel="stylesheet" href="./assets/fonts/icomoon/style.css" />
     <!-- Magnific Popup CSS -->
     <link
       rel="stylesheet"
-      href="../assets/css/vendors/magnific-popup.min.css"
+      href="./assets/css/vendors/magnific-popup.min.css"
     />
     <!-- Nice Select CSS -->
-    <link rel="stylesheet" href="../assets/css/vendors/nice-select.css" />
+    <link rel="stylesheet" href="./assets/css/vendors/nice-select.css" />
     <!-- Swiper Slider -->
-    <link rel="stylesheet" href="../assets/css/vendors/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="./assets/css/vendors/swiper-bundle.min.css" />
     <!-- AOS Animation CSS -->
-    <link rel="stylesheet" href="../assets/css/vendors/aos.min.css" />
+    <link rel="stylesheet" href="./assets/css/vendors/aos.min.css" />
     <!-- Animate CSS -->
-    <link rel="stylesheet" href="../assets/css/vendors/animate.min.css" />
+    <link rel="stylesheet" href="./assets/css/vendors/animate.min.css" />
     <!-- Main Style CSS -->
-    <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <!-- Responsive CSS -->
-    <link rel="stylesheet" href="../assets/css/responsive.css" />
+    <link rel="stylesheet" href="./assets/css/responsive.css" />
     <!-- RTL CSS -->
-    <link rel="stylesheet" href="../assets/css/rtl.css" />
+    <link rel="stylesheet" href="./assets/css/rtl.css" />
   </head>
 
   <body class="theme-color-1">
     <!-- Preloader start -->
     <div id="preLoader">
       <div class="loader">
-        <img src="../assets/images/loader-1.gif" alt="Preloader" />
+        <img src="./assets/images/loader-1.gif" alt="Preloader" />
       </div>
     </div>
     <!-- Preloader end -->
@@ -65,8 +65,8 @@
         <div class="error-content">
           <img
             class="lazyload"
-            src="../assets/images/placeholder.png"
-            data-src="../assets/images/404.svg"
+            src="./assets/images/placeholder.png"
+            data-src="./assets/images/404.svg"
             alt="image"
           />
           <h3>اوه! صفحه یافت نشد</h3>
@@ -87,27 +87,27 @@
     <!-- end error area -->
 
     <!-- Jquery JS -->
-    <script src="../assets/js/vendors/jquery.min.js"></script>
+    <script src="./assets/js/vendors/jquery.min.js"></script>
     <!-- Bootstrap JS -->
-    <script src="../assets/js/vendors/bootstrap.min.js"></script>
+    <script src="./assets/js/vendors/bootstrap.min.js"></script>
     <!-- Counter JS -->
-    <script src="../assets/js/vendors/jquery.counterup.min.js"></script>
+    <script src="./assets/js/vendors/jquery.counterup.min.js"></script>
     <!-- Magnific Popup JS -->
-    <script src="../assets/js/vendors/jquery.magnific-popup.min.js"></script>
+    <script src="./assets/js/vendors/jquery.magnific-popup.min.js"></script>
     <!-- Nice Select JS -->
-    <script src="../assets/js/vendors/jquery.nice-select.min.js"></script>
+    <script src="./assets/js/vendors/jquery.nice-select.min.js"></script>
     <!-- Swiper Slider JS -->
-    <script src="../assets/js/vendors/swiper-bundle.min.js"></script>
+    <script src="./assets/js/vendors/swiper-bundle.min.js"></script>
     <!-- Lazysizes -->
-    <script src="../assets/js/vendors/lazysizes.min.js"></script>
+    <script src="./assets/js/vendors/lazysizes.min.js"></script>
     <!-- Mouse Hover JS -->
-    <script src="../assets/js/vendors/mouse-hover-move.js"></script>
+    <script src="./assets/js/vendors/mouse-hover-move.js"></script>
     <!-- Twinmax JS -->
-    <script src="../assets/js/vendors/tweenMax.min.js"></script>
+    <script src="./assets/js/vendors/tweenMax.min.js"></script>
     <!-- AOS JS -->
-    <script src="../assets/js/vendors/aos.min.js"></script>
+    <script src="./assets/js/vendors/aos.min.js"></script>
     <!-- Main script JS -->
-    <script src="../assets/js/rtl-script.js"></script>
+    <script src="./assets/js/rtl-script.js"></script>
   </body>
 
   <!-- Mirrored from themeforest.kreativdev.com/treats/demo/rtl/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 05 Oct 2023 08:05:35 GMT -->
