--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="KreativDev">
 
     <!-- Title -->
-    <title>فروشگاه پهناور</title>
+    <title>فروشگاه پهناور - صفحه اصلی</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="./assets/images/icon.png" type="image/x-icon">
 
@@ -90,14 +90,8 @@
                         <div class="collapse navbar-collapse">
                             <ul id="mainMenu" class="navbar-nav mobile-item mx-auto">
                                 <li class="nav-item">
-                                    <a href="#home" class="nav-link toggle">صفحه اصلی <i class="fal fa-plus"></i></a>
-                                    <ul class="menu-dropdown">
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="index.html">صفحه اصلی </a>
-                                            <a class="nav-link" href="faq.html">سوالات متداول</a>
-                                        </li>
-                                        
-                                    </ul>
+                                    <a href="index.html" class="nav-link">صفحه اصلی </a>
+                                   
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="about.html">درباره</a>
