--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
                                    
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="about.html">درباره</a>
+                                    <a class="nav-link" href="coming-soon.html">درباره ما</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link toggle" href="menu.html">منو</a>
+                                    <a class="nav-link toggle" href="menu.html">محصولات ما</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link toggle" href="#">خرید کنید<i class="fal fa-plus"></i></a>
