--- a/coming-soon.html
+++ b/coming-soon.html
@@ -10,9 +10,9 @@
     <meta name="author" content="KreativDev">
 
     <!-- Title -->
-    <title>صفحه به زودی Treats</title>
+    <title>فروشگاه پهناور - به زودی ...</title>
     <!-- Favicon -->
-    <link rel="shortcut icon" href="./assets/images/logo/fav.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/images/icon.png" type="image/x-icon">
 
     <!-- Google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
@@ -74,25 +74,25 @@
                                 <div class="main-form">
                                     <a href="index.html" class="icon-link" title="به خانه برگرد" target="_self"><i class="fal fa-home"></i></a>
                                     <div class="title mb-30">
-                                        <h3 class="mb-15">به زودی</h3>
-                                        <p class="text">آماده شدن! چیزی واقعا جالب در راه است</p>
+                                        <h3 class="mb-15">به زودی ...</h3>
+                                        <p class="text">این صفحه در دست ساخت است . لطفا منتظر بمانید !</p>
                                     </div>
                                     <div id="timer" class="timer mb-30">
                                         <div id="days" class="count bg-primary-light radius-sm">
                                             <span class="h4 color-primary time mb-1"></span>
-                                            <span>ثانیه</span>
+                                            <span>روز</span>
                                         </div>
                                         <div id="hours" class="count bg-primary-light radius-sm">
                                             <span class="h4 color-primary time mb-1"></span>
-                                            <span>دقیقه</span>
+                                            <span>ساعت</span>
                                         </div>
                                         <div id="minutes" class="count bg-primary-light radius-sm">
                                             <span class="h4 color-primary time mb-1"></span>
-                                            <span>ساعت</span>
+                                            <span>دقیقه</span>
                                         </div>
                                         <div id="seconds" class="count bg-primary-light radius-sm">
                                             <span class="h4 color-primary time mb-1"></span>
-                                            <span>روز</span>
+                                            <span>ثانیه</span>
                                         </div>
                                     </div>
                                     <div class="newsletter-form">
