--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
                     <div class="fluid-left">
                         <div class="banner-content">
                             <h1 class="title mb-30" data-aos="fade-up" data-aos-delay="100">
-                                ما اقلام مواد غذایی را برای سلامتی ارائه می دهیم
+با اطمینان خرید کن ! قیمت پایین کیفیت بالا
                             </h1>
                             <p class="text color-dark" data-aos="fade-up" data-aos-delay="100">
-                                وقتی به صفحه‌آرایی صفحه نگاه می‌کند، حواس خواننده با محتوای قابل خواندن یک صفحه پرت می‌شود.
+                                ما اقلام مواد غذایی را برای سلامتی ارائه می دهیم
                             </p>
                             <div class="cta-btn mt-40 btn-groups" data-aos="fade-up" data-aos-delay="250">
                                 <a href="shop.html" class="btn btn-lg btn-primary" title="سفارش خود را انجام دهید" target="_self">سفارش خود را انجام دهید</a>
