--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-title title-center mb-50" data-aos="fade-up">
-                        <h2 class="title mb-0">محبوب ترین دسته ها را بیابید</h2>
+                        <h2 class="title mb-0"> پر فروش ترین دسته ها </h2>
                     </div>
                 </div>
                 <div class="col-12" data-aos="fade-up">
